test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minha-aplicacao-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: http://a32433118c2c442f2bed5e5b3419f1e1-439486694.us-east-1.elb.amazonaws.com/
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svr-lab1
            port:
              number: 80
