test/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: peakaya
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "peakaya"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: peakaya-service
            port:
              number: 4200
